# crisisfacts_summarization

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  cleaning.py  discussion.qmd  example.ipynb  output.txt  pyproject.toml  requirements.txt  server.py  summarization_comparison.ipynb  test.ipynb  upload.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: documentation.md
.github/workflows/: ci-cd.yml
assets/: eda.ipynb  jaeho.ipynb
assets/summary_comparison/: summarization.ipynb
auth/: crisisfacts.json
crisisfacts/: 001.csv
crisisfacts/001/2017-12-07/docs.pklz4/: bin.pos  idx.doc_id.key  idx.doc_id.pos
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat
docs/autoapi/: index.rst
docs/autoapi/crisis_summary/__main__/: index.rst
docs/autoapi/util/: index.rst
src/crisis_summary/: __init__.py  __main__.py  crisis_summary.py  main.py  summary.py  test.ipynb
src/crisis_summary/utils/: util.py
src/utils/: util.py
summary_comparison/: evaluation.ipynb  summarization.ipynb  summarization_comparison.ipynb  summary2.ipynb
summary_comparison/submission_json/: my_submission_bart_detail.json  my_submission_gpt_detail.json  my_submission_pega_detail.json
tests/: test_crisis.py  test_crisis_summary.py
